feat: Add initial frontend structure including SEO, modal, team data, and core pages.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/zynoxbit.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="ZynoxBit - Crafting immersive digital experiences with cutting-edge technology and design. We build the future of the web." />
+    content="ZynoxBit - Top-rated Software Agency serving Malaysia & Bangladesh. Expert Web Development, MERN Stack, & Digital Marketing solutions for global clients." />
   <title>ZynoxBit Digital Experience Platform</title>
 </head>
 
